Outputs en orden ascendente

--- a/fundamentos-estadisticos/libros/analisis_exploratorio.ipynb
+++ b/fundamentos-estadisticos/libros/analisis_exploratorio.ipynb
@@ -2254,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "7d571fd2-ac2d-4513-9e5c-66a745aa3a93",
    "metadata": {},
    "outputs": [
@@ -2467,7 +2467,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "id": "2f867319-669e-42fd-b112-4ede89f88d60",
    "metadata": {},
    "outputs": [
@@ -2548,7 +2548,7 @@
        "green            20     13   33"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "id": "200aef43-5375-4e17-80bb-3d5318394fc2",
    "metadata": {},
    "outputs": [
@@ -2582,7 +2582,7 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_8f30f_\">\n",
+       "<table id=\"T_a148d_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >sugar</th>\n",
@@ -2599,31 +2599,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_8f30f_level0_row0\" class=\"row_heading level0 row0\" >Earl Grey</th>\n",
-       "      <td id=\"T_8f30f_row0_col0\" class=\"data row0 col0\" >43.5</td>\n",
-       "      <td id=\"T_8f30f_row0_col1\" class=\"data row0 col1\" >56.5</td>\n",
-       "      <td id=\"T_8f30f_row0_col2\" class=\"data row0 col2\" >100.0</td>\n",
+       "      <th id=\"T_a148d_level0_row0\" class=\"row_heading level0 row0\" >Earl Grey</th>\n",
+       "      <td id=\"T_a148d_row0_col0\" class=\"data row0 col0\" >43.5</td>\n",
+       "      <td id=\"T_a148d_row0_col1\" class=\"data row0 col1\" >56.5</td>\n",
+       "      <td id=\"T_a148d_row0_col2\" class=\"data row0 col2\" >100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_8f30f_level0_row1\" class=\"row_heading level0 row1\" >black</th>\n",
-       "      <td id=\"T_8f30f_row1_col0\" class=\"data row1 col0\" >68.9</td>\n",
-       "      <td id=\"T_8f30f_row1_col1\" class=\"data row1 col1\" >31.1</td>\n",
-       "      <td id=\"T_8f30f_row1_col2\" class=\"data row1 col2\" >100.0</td>\n",
+       "      <th id=\"T_a148d_level0_row1\" class=\"row_heading level0 row1\" >black</th>\n",
+       "      <td id=\"T_a148d_row1_col0\" class=\"data row1 col0\" >68.9</td>\n",
+       "      <td id=\"T_a148d_row1_col1\" class=\"data row1 col1\" >31.1</td>\n",
+       "      <td id=\"T_a148d_row1_col2\" class=\"data row1 col2\" >100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_8f30f_level0_row2\" class=\"row_heading level0 row2\" >green</th>\n",
-       "      <td id=\"T_8f30f_row2_col0\" class=\"data row2 col0\" >60.6</td>\n",
-       "      <td id=\"T_8f30f_row2_col1\" class=\"data row2 col1\" >39.4</td>\n",
-       "      <td id=\"T_8f30f_row2_col2\" class=\"data row2 col2\" >100.0</td>\n",
+       "      <th id=\"T_a148d_level0_row2\" class=\"row_heading level0 row2\" >green</th>\n",
+       "      <td id=\"T_a148d_row2_col0\" class=\"data row2 col0\" >60.6</td>\n",
+       "      <td id=\"T_a148d_row2_col1\" class=\"data row2 col1\" >39.4</td>\n",
+       "      <td id=\"T_a148d_row2_col2\" class=\"data row2 col2\" >100.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x25cbeb72a60>"
+       "<pandas.io.formats.style.Styler at 0x2950f90ebe0>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2643,7 +2643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 33,
    "id": "3eef1206-d2e6-4fa0-be8d-d800fb9221d6",
    "metadata": {},
    "outputs": [
@@ -2717,7 +2717,7 @@
        "All                       193     74     33"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2742,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 34,
    "id": "ea56e998-5b82-4f85-b4bf-22b56ad52e4c",
    "metadata": {},
    "outputs": [
@@ -2751,7 +2751,7 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_f5911_\">\n",
+       "<table id=\"T_8caad_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >Tea</th>\n",
@@ -2768,37 +2768,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_f5911_level0_row0\" class=\"row_heading level0 row0\" >tea bag</th>\n",
-       "      <td id=\"T_f5911_row0_col0\" class=\"data row0 col0\" >60.6</td>\n",
-       "      <td id=\"T_f5911_row0_col1\" class=\"data row0 col1\" >48.6</td>\n",
-       "      <td id=\"T_f5911_row0_col2\" class=\"data row0 col2\" >51.5</td>\n",
+       "      <th id=\"T_8caad_level0_row0\" class=\"row_heading level0 row0\" >tea bag</th>\n",
+       "      <td id=\"T_8caad_row0_col0\" class=\"data row0 col0\" >60.6</td>\n",
+       "      <td id=\"T_8caad_row0_col1\" class=\"data row0 col1\" >48.6</td>\n",
+       "      <td id=\"T_8caad_row0_col2\" class=\"data row0 col2\" >51.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f5911_level0_row1\" class=\"row_heading level0 row1\" >tea bag+unpackaged</th>\n",
-       "      <td id=\"T_f5911_row1_col0\" class=\"data row1 col0\" >31.1</td>\n",
-       "      <td id=\"T_f5911_row1_col1\" class=\"data row1 col1\" >31.1</td>\n",
-       "      <td id=\"T_f5911_row1_col2\" class=\"data row1 col2\" >33.3</td>\n",
+       "      <th id=\"T_8caad_level0_row1\" class=\"row_heading level0 row1\" >tea bag+unpackaged</th>\n",
+       "      <td id=\"T_8caad_row1_col0\" class=\"data row1 col0\" >31.1</td>\n",
+       "      <td id=\"T_8caad_row1_col1\" class=\"data row1 col1\" >31.1</td>\n",
+       "      <td id=\"T_8caad_row1_col2\" class=\"data row1 col2\" >33.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f5911_level0_row2\" class=\"row_heading level0 row2\" >unpackaged</th>\n",
-       "      <td id=\"T_f5911_row2_col0\" class=\"data row2 col0\" >8.3</td>\n",
-       "      <td id=\"T_f5911_row2_col1\" class=\"data row2 col1\" >20.3</td>\n",
-       "      <td id=\"T_f5911_row2_col2\" class=\"data row2 col2\" >15.2</td>\n",
+       "      <th id=\"T_8caad_level0_row2\" class=\"row_heading level0 row2\" >unpackaged</th>\n",
+       "      <td id=\"T_8caad_row2_col0\" class=\"data row2 col0\" >8.3</td>\n",
+       "      <td id=\"T_8caad_row2_col1\" class=\"data row2 col1\" >20.3</td>\n",
+       "      <td id=\"T_8caad_row2_col2\" class=\"data row2 col2\" >15.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f5911_level0_row3\" class=\"row_heading level0 row3\" >All</th>\n",
-       "      <td id=\"T_f5911_row3_col0\" class=\"data row3 col0\" >100.0</td>\n",
-       "      <td id=\"T_f5911_row3_col1\" class=\"data row3 col1\" >100.0</td>\n",
-       "      <td id=\"T_f5911_row3_col2\" class=\"data row3 col2\" >100.0</td>\n",
+       "      <th id=\"T_8caad_level0_row3\" class=\"row_heading level0 row3\" >All</th>\n",
+       "      <td id=\"T_8caad_row3_col0\" class=\"data row3 col0\" >100.0</td>\n",
+       "      <td id=\"T_8caad_row3_col1\" class=\"data row3 col1\" >100.0</td>\n",
+       "      <td id=\"T_8caad_row3_col2\" class=\"data row3 col2\" >100.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x25cbec2d790>"
+       "<pandas.io.formats.style.Styler at 0x2950f0318e0>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
