--- a/aprendizaje-automatico/libros/tarea03-preprocesamiento.ipynb
+++ b/aprendizaje-automatico/libros/tarea03-preprocesamiento.ipynb
@@ -467,44 +467,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04bba31b-497f-4d2c-830c-e0e6a07e8c68",
+   "cell_type": "markdown",
+   "id": "8c974d82-afd3-4cd6-acc3-1402ec5ae8e3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Hasta aquí se ha trabajado el código de `casas_traducir_geo.R`\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b10d2e94-3005-48c8-95c5-4f69fb133a83",
+   "metadata": {},
+   "source": [
+    "# Cadena de procesamiento\n",
+    "\n",
+    "Considera los siguientes pasos de procesamiento\n",
+    "* `train_test_split` con el 75% para entrenamiento"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "018f70cd-b7ee-4283-a0d0-f37b9b01aaea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "37d19124-3f89-4ea1-be02-1c77345ef751",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b56977e0-b7b3-4e44-86a2-afa88290e845",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49ced827-2f7f-41c1-b5b5-ce9e4dcd3f38",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1095, 45)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "casas_train, casas_test = train_test_split(casas, test_size=0.25, random_state=83)\n",
+    "casas_train.shape"
+   ]
   },
   {
    "cell_type": "code",
