Typo en markdown

--- a/optimizacion/01-computo-cientifico/1.3-normas-vectoriales-matriciales.ipynb
+++ b/optimizacion/01-computo-cientifico/1.3-normas-vectoriales-matriciales.ipynb
@@ -624,8 +624,8 @@
    "id": "1a91363b-5447-44bc-8f61-ac67c3de860b",
    "metadata": {},
    "source": [
-    "Se puede obtener la matriz $A$ a partir de sus vectores singulares con la ecuación:</br>\n",
-    "$u(s)\\cdot v^{T}$"
+    "Se puede obtener la matriz $A$ a partir de sus vectores singulares con la ecuación:\n",
+    "<br>$u(s)\\cdot v^{T}$"
    ]
   },
   {
