--- a/optimizacion/01-computo-cientifico/1.3-normas-vectoriales-matriciales.ipynb
+++ b/optimizacion/01-computo-cientifico/1.3-normas-vectoriales-matriciales.ipynb
@@ -1007,7 +1007,7 @@
     "\n",
     "La norma inducida de una matriz $A$ toma su nombre debido a que se induce de la norma de dos vectores $x_{in}, x_{out}$, y está definida como: $$||A||=\\sup_{x\\neq 0}\\frac{ ||Ax|| }{ ||x|| }$$\n",
     "\n",
-    "Mide la magnitud de la deformación que una matriz $A$ provoca en un vector de entrada $x$, siendo $x$ el supremo de un espacio vectorial $V$ (el vector $x$ más grande de $V$). Compara entonces la norma del vector $x_{out}$ (Transformado por $A$) contra la norma del vector $x_{in}$\n",
+    "Mide la magnitud de la deformación que una matriz $A$ provoca en un vector de entrada $x$, siendo $x$ el supremo de un espacio vectorial $V$ (el vector $x$ más grande de $V$). Compara entonces la norma del vector $x_{out}$ ($x_{in}$ transformado por $A$) contra la norma del vector $x_{in}$\n",
     "\n",
     "[Induced matrix norms](https://www.youtube.com/watch?v=2rIOWQY9rp4&t=1s)"
    ]
