--- a/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
+++ b/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
@@ -677,12 +677,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a29a227c-fe1d-4e5a-9fd0-ab07cd1af5d4",
+   "cell_type": "markdown",
+   "id": "2a60e0b4-f838-48f1-ae84-bb1055cbfede",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Yo no puedo identificar los datos verdaderos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee4c6df4-c941-43c1-a4fd-8521b91f5258",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2\n",
+    "Calcula el promedio de strikes por juego en cada grupo (donde grupo se define por Location)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79731108-332e-499d-84e4-c0a184de7db1",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3\n",
+    "Realiza una prueba de permutación para la diferencia de las medias. Grafica la\n",
+    "distribución de referencia y calcula el valor $p$ de dos colas."
+   ]
   }
  ],
  "metadata": {
