--- a/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
+++ b/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
@@ -984,7 +984,7 @@
    "id": "567040fd-c61c-4537-9d25-ac05407da178",
    "metadata": {},
    "source": [
-    "$$p_{val}=\\frac{card(TS_{P}>TS_{OBS})}{card(p)}$$\n",
+    "$p_{val}=\\frac{card(TS_{P}>TS_{OBS})}{card(p)}$\n",
     "Siendo:\n",
     "* $TS_P$: Permutation Test Statistic\n",
     "* $TS_{OBS}$: Observed Test Statistic"
@@ -1423,7 +1423,7 @@
    "id": "7178d934-f829-4a00-9f21-9b67348dce34",
    "metadata": {},
    "source": [
-    "Dada la distribución anterior, calculada **1,000** permutaciones de los datos, se obtuvo un valor $p=0.04$, lo cual nos da evidencia suficiente para rechazar la hipótesis nula, es decir, las medicinas no producen el mismo efecto en el sueño\n",
+    "Dada la distribución anterior, calculada con **1,000** permutaciones de los datos, se obtuvo un valor $p=0.04$, lo cual nos da evidencia suficiente para rechazar la hipótesis nula, es decir, las medicinas no producen el mismo efecto en el sueño\n",
     "\n",
     "---"
    ]
