--- a/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
+++ b/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
@@ -1153,7 +1153,9 @@
     "<br> Ambas medicinas producen el mismo efecto en el sueño.\n",
     "\n",
     "* Nuestra estadística de interés es media de las diferencias entre las medicinas. Calcula la diferencia observada.\n",
-    "* Hay variación entre los pacientes. ¿Tenemos evidencia para rechazar que son iguales? ¿Cómo hacemos nuestra distribución de referencia?"
+    "* Hay variación entre los pacientes. ¿Tenemos evidencia para rechazar que son iguales? ¿Cómo hacemos nuestra distribución de referencia?\n",
+    "* Haz una gráfica de la distribución de referencia y grafica encima el valor observado en los datos originales.\n",
+    "* Calcula el valor p (justifica porque a una o dos colas)."
    ]
   },
   {
