--- a/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
+++ b/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
@@ -41,7 +41,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "0ed98302-bf2e-4679-a120-5be04895b951",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -57,7 +61,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "335708ab-2c34-4313-99e6-5d56835dcaf2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -85,7 +93,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a5038e84-fff0-4bc8-b54e-061f81397668",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -108,7 +120,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "cf2526f3-d59f-414b-8da3-2e62d4e86f0c",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -220,7 +236,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "54404063-6470-483d-b5ad-edb51271b1a7",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -238,7 +258,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "e8b44131-45cf-4355-b0c2-7e0b47e97911",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -281,7 +305,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "01e012e5-7d88-487f-9b48-c949ebc98196",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -644,7 +672,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "c098e8e4-f357-490e-ab50-45b84395fc9e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -699,7 +731,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "4fdb610f-378a-4968-bbf5-3622a2ad7f2e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -811,7 +847,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "a731a574-68aa-4d0f-84e2-21fac14e3c3f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -886,7 +926,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "80c12747-c023-498f-8f7e-9db51c1d774e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import random"
@@ -896,7 +940,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "689615cd-d6d0-4494-bb01-9b7e6af13466",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -916,7 +964,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "aa7c4b81-1fd7-4274-a1df-fa99670596e4",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -947,7 +999,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "e804a112-bf24-4815-a7e4-2587a1ed230a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -995,7 +1051,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "10ddd543-2363-4e0b-896d-54df4a1f9cb8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1024,7 +1084,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "34ed0b17-49d3-48c9-bf09-0a1f04557817",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1170,7 +1234,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "59540975-4522-47a0-8df9-6f8470228332",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1347,7 +1415,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "90f70ddf-b533-4a9e-ab65-625550d9f526",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1368,7 +1440,12 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "d1197388-a3ea-4f3c-93c3-ca6e3389f5d9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1407,7 +1484,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "9d3269dc-c026-4545-900b-47f414225096",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
