Video de referencia

--- a/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
+++ b/fundamentos-estadisticos/libros/pruebas_hipotesis.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "# Tarea 4: Pruebas de hipótesis\n",
     "\n",
-    "Solución de los ejercicios de la sección `Pruebas de hipótesis` del libro del curos [Fundamentos Estadísticos](https://tereom.github.io/fundamentos-2022/pruebas-de-hip%C3%B3tesis.html)\n",
-    "\n",
-    "El siguiente video es bastante claro sobre lo que hace una [prueba de permutación](https://www.youtube.com/watch?v=rJ3AZCQuiLw)"
+    "Solución de los ejercicios de la sección `Pruebas de hipótesis` del libro del curos [Fundamentos Estadísticos](https://tereom.github.io/fundamentos-2022/pruebas-de-hip%C3%B3tesis.html)"
    ]
   },
   {
@@ -26,6 +24,9 @@
    "metadata": {},
    "source": [
     "## Pruebas de permutación\n",
+    "\n",
+    "El siguiente video es bastante claro sobre lo que hace una [prueba de permutación](https://www.youtube.com/watch?v=rJ3AZCQuiLw)\n",
+    "\n",
     "La tabla de datos `Phillies2009.csv`  contiene información de la temporada de baseball 2009 para el equipo de Philadelphia Phillies, en este ejercicio queremos comparar los strikes (`StrikeOuts`) entre los juegos en casa y de visitante."
    ]
   },
@@ -41,11 +42,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "0ed98302-bf2e-4679-a120-5be04895b951",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -61,11 +58,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "335708ab-2c34-4313-99e6-5d56835dcaf2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -93,11 +86,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a5038e84-fff0-4bc8-b54e-061f81397668",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -120,11 +109,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "cf2526f3-d59f-414b-8da3-2e62d4e86f0c",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -236,11 +221,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "54404063-6470-483d-b5ad-edb51271b1a7",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -258,11 +239,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "e8b44131-45cf-4355-b0c2-7e0b47e97911",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -305,11 +282,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "01e012e5-7d88-487f-9b48-c949ebc98196",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -672,11 +645,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "c098e8e4-f357-490e-ab50-45b84395fc9e",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -731,11 +700,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "4fdb610f-378a-4968-bbf5-3622a2ad7f2e",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -847,11 +812,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "a731a574-68aa-4d0f-84e2-21fac14e3c3f",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -926,11 +887,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "80c12747-c023-498f-8f7e-9db51c1d774e",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random"
@@ -940,11 +897,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "689615cd-d6d0-4494-bb01-9b7e6af13466",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -964,11 +917,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "aa7c4b81-1fd7-4274-a1df-fa99670596e4",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -999,11 +948,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "e804a112-bf24-4815-a7e4-2587a1ed230a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1051,11 +996,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "10ddd543-2363-4e0b-896d-54df4a1f9cb8",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1075,6 +1016,9 @@
    "metadata": {},
    "source": [
     "# Pruebas pareadas\n",
+    "\n",
+    "El siguiente video es bastante claro sobre lo que hace una [prueba de permutación](https://www.youtube.com/watch?v=3e6ZM-oWwbM)\n",
+    "\n",
     "En este ejemplo buscamos comparar la diferencia entre dos medicinas para dormir.\n",
     "* `ID` es el identificador de paciente, y `medicina_1` y `medicina_2` son las horas extras de sueño vs. no usar medicina.\n",
     "* Examina los datos."
@@ -1084,11 +1028,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "34ed0b17-49d3-48c9-bf09-0a1f04557817",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1234,11 +1174,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "59540975-4522-47a0-8df9-6f8470228332",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1415,11 +1351,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "90f70ddf-b533-4a9e-ab65-625550d9f526",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1441,9 +1373,6 @@
    "execution_count": 19,
    "id": "d1197388-a3ea-4f3c-93c3-ca6e3389f5d9",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1484,11 +1413,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "9d3269dc-c026-4545-900b-47f414225096",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
