--- a/aprendizaje-automatico/libros/tarea04-regularizacion.ipynb
+++ b/aprendizaje-automatico/libros/tarea04-regularizacion.ipynb
@@ -74,7 +74,13 @@
     "de manera que combina ventajas de ridge (encoger juntos parámetros de variables correlacionadas) y lasso (eliminar variables que aportan poco a la predicción).\n",
     "\n",
     "**Pregunta 1**: ¿Qué modelo se desempeña mejor? ¿Cuál está más sobreajustado? ¿Qué cosas podrías considerar para reducir el sesgo (piensa qué nuevas entradas podrías construir)?\n",
-    "<br>Se desempeña mejor el modelo con `mayor regularización`, lo cual es indicativo de un modelo más rígido comparado con el de menor regularización. Esto quiere decir que el modelo con baja regularización está más sobreajustado a los datos. Para reducir el sesgo se podría pensar en otro tipo de modelo que no necesariamente sea una regresión lineal.\n",
+    "<br>Se desempeña mejor el modelo con `mayor regularización`, lo cual es indicativo de un modelo más rígido comparado con el de menor regularización. Esto quiere decir que el modelo con baja regularización está más sobreajustado a los datos. Para reducir el sesgo se podría pensar en\n",
+    "* Utilizar otro tipo de modelo que no necesariamente sea una regresión lineal\n",
+    "* Incluir más palabras como entradas adicionales\n",
+    "* Utilizar combinaciones de palabras\n",
+    "* Usar otros esquemas además de la codificació binaria de tokens.\n",
+    "\n",
+    "RMSE de los modelos:\n",
     "* Baja regularización: $RMSE=0.4430$\n",
     "* Mayor regularización: $RMSE=0.3961$\n",
     "\n",
@@ -287,7 +293,7 @@
    "id": "b0cda6f6-00c5-4dd2-be42-e31de2c637e4",
    "metadata": {},
    "source": [
-    "Los coeficientes estan en los cuadrantes 1 y 3.\n",
+    "Los coeficientes estan en los cuadrantes 1 y 3. Adicionalmente, varios de los coeficientes del modelo con penalización alta son cero, mientras que en el de menor regularización tienen valores negativos o positivos.\n",
     "\n",
     "Responde las preguntas dada la siguiente gráfica:\n",
     "![image.png](attachment:bf75dd1d-452b-4604-b3e3-18342f6c49fb.png)"
