--- a/aprendizaje-automatico/libros/tarea04-regularizacion.ipynb
+++ b/aprendizaje-automatico/libros/tarea04-regularizacion.ipynb
@@ -311,12 +311,12 @@
     "<br> Porque los modelos con baja regularización, es decir, los modelos más flexibles, son los modelos que más fácilmente resultan en problemas de sobreajuste. Este es un problema por varianza de los modelos. Esto lo podemos notar en la parte izquierda de la gráfica, la zona más flexible, en donde a diferentes $n$'s de tokens, obtenemos errores muy diferentes entre sí para una $\\lambda$ dada\n",
     "\n",
     "**Pregunta 6**: Considera que el valor de **max_tokens** igual a 100 lo puedes descalificar. ¿Es por problemas de sesgo o varianza? ¿Por qué para valores grandes de regularización se desempeña igual que los otros modelos más grandes?\n",
-    "<br>Esto es por problemas de varianza, sin embargo, es de notarse que a diferencia de los otros modelos, este no tiene una caída súbita en el error. Esto es debido a que el término de penalización en la ecuación de Ridge y Lasso es dependiente de los coeficientes del modelo. Este modelo tiene únicamente 100 coeficientes comparado con los demás, por lo que soporta altos valores de $\\lambda$ antes de empezar a bajar el error.\n",
+    "<br>Esto es por problemas de sesgo, sin embargo, es de notarse que a diferencia de los otros modelos, este no tiene una caída súbita en el error. Esto es debido a que el término de penalización en la ecuación de Ridge y Lasso es dependiente de los coeficientes del modelo. Este modelo tiene únicamente 100 coeficientes comparado con los demás, por lo que soporta altos valores de $\\lambda$ antes de empezar a bajar el error.\n",
     "\n",
     "Al final colnverge al mismo valor que los demás porque altos valores de penalty van mandar los coeficientes del modelo a cero, y por ende resultar en una constante.\n",
     "\n",
     "**Pregunta 7**: Compara el número original de columnas y cuántas de ellas utiliza tu modelo. Examina los coeficientes de la tabla de arriba. ¿Ves algún patrón entre coeficientes positivos y negativos?\n",
-    "<br> Originalmente se tenían `6,001` columnas, al final el modelo utiliza únicamente `594` de ellas. Las palabras con coeficientes negativos se pueden asociar a sentimientos negativos; en contraste, las palabras con coeficientes positivos se pueden asociar con sentimientos positivos."
+    "<br> Originalmente se tenían `9,000` columnas, al final el modelo utiliza únicamente `594` de ellas. Las palabras con coeficientes negativos se pueden asociar a sentimientos negativos; en contraste, las palabras con coeficientes positivos se pueden asociar con sentimientos positivos."
    ]
   }
  ],
